--- a/app/src/main/res/layout/activity_run_detail.xml
+++ b/app/src/main/res/layout/activity_run_detail.xml
@@ -7,12 +7,67 @@
     tools:context=".RunDetailActivity">
 
     <TextView
-        android:id="@+id/tvRunId"
+        android:id="@+id/tv_rundetail_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Run ID"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        android:text="00:00:00"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_rundetail_distance"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mapView" />
+
+    <fragment
+        android:id="@+id/mapView"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".RunDetailActivity" />
+
+    <TextView
+        android:id="@+id/tv_rundetail_distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="0.00"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_rundetail_duration"
+        app:layout_constraintTop_toBottomOf="@+id/mapView" />
+
+    <TextView
+        android:id="@+id/tv_rundetail_durationtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Duration"
+        app:layout_constraintEnd_toEndOf="@+id/tv_rundetail_duration"
+        app:layout_constraintStart_toStartOf="@+id/tv_rundetail_duration"
+        app:layout_constraintTop_toBottomOf="@+id/tv_rundetail_duration" />
+
+    <TextView
+        android:id="@+id/tv_rundetail_distancetext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Distance"
+        app:layout_constraintEnd_toEndOf="@+id/tv_rundetail_distance"
+        app:layout_constraintStart_toStartOf="@+id/tv_rundetail_distance"
+        app:layout_constraintTop_toBottomOf="@+id/tv_rundetail_distance" />
+
+    <TextView
+        android:id="@+id/tv_rundetail_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="15.09.2020 - 09:38"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_rundetail_durationtext" />
 </androidx.constraintlayout.widget.ConstraintLayout>
