--- a/app/src/main/res/layout/run_item.xml
+++ b/app/src/main/res/layout/run_item.xml
@@ -16,7 +16,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_action_activity"></ImageView>
+            android:scaleX="-1"
+            android:src="@drawable/ic_runner"></ImageView>
 
         <TextView
             android:id="@+id/tv_run_distance"
