Added margin and corner radius

--- a/app/src/main/res/layout/run_item.xml
+++ b/app/src/main/res/layout/run_item.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_margin="8dp"
+    android:elevation="10dp"
+    app:cardCornerRadius="6dp"
+    app:cardElevation="10dp"
     tools:ignore="MissingDefaultResource">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:shadowColor="#FFF"
+        android:shadowDx="0"
+        android:shadowDy="30"
+        android:shadowRadius="50">
 
         <ImageView
             android:id="@+id/iv_run_item"
